# Tacad2D

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
ext/: CMakeLists.txt
src/: CMakeLists.txt  Pch.hxx  main.cc
src/App/: AppContext.cxx  AppContext.hxx  CommandLine.cxx  CommandLine.hxx  GuiApplication.cxx  GuiApplication.hxx  MainWindow.cxx  MainWindow.hxx  MessagesPanel.hxx  ShapeInspector.hxx  ShortcutDefinition.cxx  ShortcutDefinition.hxx  ViewportView.cxx  ViewportView.hxx  WelcomeDialog.cxx  WelcomeDialog.hxx
src/App/Commands/: AppCommands.cxx  AppCommands.hxx
src/Comm/: BaseObject.hxx  Color.hxx  Maths.hxx  Memory.hxx  MessagePrinter.hxx  OcctHelper.hxx  ParameterSets.hxx  PropertyChanged.hxx  ResourceUtils.hxx  ShortcutHandler.hxx  Signal.hxx  SketchSolve.hxx
src/Core/: Application.cxx  Application.hxx  CoreContext.cxx  CoreContext.hxx  Document.cxx  Document.hxx  GridTypes.hxx  Viewport.cxx  Viewport.hxx  Workspace.cxx  Workspace.hxx
src/Core/Geom/: Geom2dUtils.hxx
src/Core/Project/: WorkingContext.cxx  WorkingContext.hxx
src/Core/Shapes/: Shape.cxx  Shape.hxx  Shape2D.hxx
src/Core/Shapes/Primitives/: Box.cxx  Box.hxx
src/Core/Shapes/Sketch/: Sketch.cxx  Sketch.hxx  SketchConstraint.hxx  SketchConstraintSolver.hxx  SketchElement.cxx  SketchElement.hxx  SketchFactory.cxx  SketchFactory.hxx  SketchSegment.cxx  SketchSegment.hxx  SketchUtils.cxx  SketchUtils.hxx
src/Core/Shapes/Sketch/Constraints/: SketchConstraintAngle.hxx  SketchConstraintConcentric.hxx  SketchConstraintEqual.hxx  SketchConstraintFixed.hxx  SketchConstraintHelper.hxx  SketchConstraintHorizontal.hxx  SketchConstraintHorizontalDistance.hxx  SketchConstraintLength.hxx  SketchConstraintParallel.hxx  SketchConstraintPerpendicular.hxx  SketchConstraintPointOnMidpoint.hxx  SketchConstraintPointOnSegment.hxx  (+5 more)
src/Core/Topology/: Body.cxx  Body.hxx  Entity.cxx  Entity.hxx  InteractiveEntity.cxx  InteractiveEntity.hxx
src/Iact/: InteractiveContext.cxx  InteractiveContext.hxx  MouseEventData.cxx  MouseEventData.hxx  ViewportController.cxx  ViewportController.hxx  WorkspaceController.cxx  WorkspaceController.hxx
src/Iact/Commands/: CommandHelper.hxx  DocumentCommands.hxx  ModelCommands.hxx  SketchCommands.hxx  SketchEditorPointElement.hxx  WorkspaceCommands.hxx
src/Iact/Framework/: Editor.cxx  Editor.hxx  Tool.cxx  Tool.hxx  ToolAction.cxx  ToolAction.hxx  WorkspaceControl.cxx  WorkspaceControl.hxx
src/Iact/HudElements/: Coord2DHudElement.cxx  Coord2DHudElement.hxx  Cursors.cc  Cursors.h  HudElement.cxx  HudElement.hxx  HudManager.cxx  HudManager.hxx  MultiValueHudElement.cxx  MultiValueHudElement.hxx  ValueHudElement.cxx  ValueHudElement.hxx
src/Iact/Shapes/Primitives/: CreateBoxTool.cxx  CreateBoxTool.hxx
src/Iact/Shapes/Sketch/: CreateSketchTool.cxx  CreateSketchTool.hxx  SketchEditorParameterSet.cxx  SketchEditorParameterSet.hxx  SketchEditorTool.cxx  SketchEditorTool.hxx  SketchSegmentArcCenterCreator.cxx  SketchSegmentArcCenterCreator.hxx  SketchSegmentArcRimCreator.cxx  SketchSegmentArcRimCreator.hxx  SketchSegmentBezier2Creator.cxx  SketchSegmentBezier2Creator.hxx  SketchSegmentBezier3Creator.cxx  SketchSegmentBezier3Creator.hxx  SketchSegmentCircleCreator.cxx  SketchSegmentCircleCreator.hxx  SketchSegmentCreator.cxx  SketchSegmentCreator.hxx  SketchSegmentEllipseCenterCreator.cxx  SketchSegmentEllipseCenterCreator.hxx  SketchSegmentEllipticalArcCenterCreator.cxx  SketchSegmentEllipticalArcCenterCreator.hxx  SketchSegmentLineCreator.cxx  SketchSegmentLineCreator.hxx  SketchSegmentRectangleCreator.cxx  SketchSegmentRectangleCreator.hxx  SketchTool.cxx  SketchTool.hxx  SketchToolMirror.cxx  SketchToolMirror.hxx  SketchToolScale.cxx  SketchToolScale.hxx
src/Iact/ToolActions/: PointAction.cxx  PointAction.hxx  ScaleSketchElementAction.cxx  ScaleSketchElementAction.hxx  SketchPointAction.cxx  SketchPointAction.hxx
src/Iact/Viewport/: ViewportFrameBuffer.cxx  ViewportFrameBuffer.hxx  ViewportHelper.cxx  ViewportHelper.hxx  ViewportPanel.cxx  ViewportPanel.hxx  ViewportWidget.cxx  ViewportWidget.hxx
src/Iact/Visual/: Hint.cxx  Hint.hxx  HintCircle.cxx  HintCircle.hxx  HintLine.cxx  HintLine.hxx  Marker.cxx  Marker.hxx  VisualObject.cxx  VisualObject.hxx
src/Iact/Workspace/: EditorState.cxx  EditorState.hxx  Snap2D.cxx  Snap2D.hxx  Snap3D.cxx  Snap3D.hxx  SnapBase.cxx  SnapBase.hxx  SnapMode.hxx  SnapOnCurve2D.cxx  SnapOnCurve2D.hxx
src/Occt/AisExtensions/: AISX_Grid.cxx  AISX_Grid.hxx
src/Occt/OcctExtensions/: AIS_PointEx.cxx  AIS_PointEx.hxx  AIS_ViewCubeEx.cxx  AIS_ViewCubeEx.hxx
src/Occt/OcctHelper/: AisHelper.cxx  AisHelper.hxx  PixMapHelper.cxx  PixMapHelper.hxx
src/Pres/Commands/: ActionCommand.cxx  ActionCommand.hxx  RelayCommand.cxx  RelayCommand.hxx
src/Xcaf/Attributes/: BoxAttribute.cxx  BoxAttribute.hxx  BoxTool.cxx  BoxTool.hxx  DocumentTool.cxx  DocumentTool.hxx  InstanceAttribute.cxx  InstanceAttribute.hxx  ShapeAttribute.cxx  ShapeAttribute.hxx  ShapeTool.cxx  ShapeTool.hxx  ViewportAttribute.cxx  ViewportAttribute.hxx  WorkingContextAttribute.cxx  WorkingContextAttribute.hxx  WorkspaceAttribute.cxx  WorkspaceAttribute.hxx
src/Xcaf/Drivers/: BoxDriver.cxx  BoxDriver.hxx
(+32 files in other folders)
